changes done in project and education

--- a/Narendra.html
+++ b/Narendra.html
@@ -84,7 +84,7 @@
 
         <section id="about">
             <div id="my-image">
-                <img src="../Res/1666694228603 (2).jpg">
+                <img src="./images/1666694228603 (2).jpg">
             </div>
             <div id="about-para">
 
@@ -214,7 +214,11 @@
                     <h1>IMDB Clone-App</h1>
                     <p>The app has been implemented using vanilla JavaScript, and it will interact with the IMDB API to fetch movie data. The user interface will be designed using CSS, and it uses a CSS framework like Bootstrap to assist with styling as desired. The app's data, including the list of favourite movies, will be stored in the browser's local storage to make it persistent across sessions</p>
                 </div>
-                
+                <div class="timeline-divider">
+                    <div class="timeline-traveller">
+                        <i class="fa-solid fa-plane"></i>
+                    </div>
+                </div>
             </div>
 
 
@@ -246,7 +250,11 @@
                     <h1>JUN’16  TO MAY’17</h1>
                     <h3>SSC | Nagarjuna High School | State board</h3>
                     <h4>Studied X and passed with 9.8 GPA.</h4>
-
+                </div>
+                <div class="education-timeline">
+                    <div class="education-traveller">
+                        <i class="fa-solid fa-car-side"></i>
+                    </div>
                 </div>
             </div>
         </section>
