--- a/Narendra.html
+++ b/Narendra.html
@@ -193,22 +193,21 @@
 
             <div class="timeline">
                 <div class="timeline-box">
-                    <h1>Power chart</h1>
-                    <p>The tool is designed for hospitals, physicians, and nurse to documents both the clinical conditions. They diagnose as well as the services and items delivered to beneficiaries to treat on their conditions.</p>
-                    <p>Technologies used:</p>
-                    <p>Java 8, MySQL, Spring Boot, Spring Data JPA, Eclipse, Maven, MVC, Hibernate with JPA, JPQL, Postman, Git, Lombok, Swagger.</p>
+                    
+                    <h1>A Study of Partial Replacement of Finely ground waste glass with fine aggregate in Concrete</h1>
+                    <p>To investigate the feasibility and effectiveness of replacing conventional fine aggregate with finely ground waste glass in concrete production, with a focus on sustainability. This research seeks to assess the potential benefits of incorporating waste glass as an environmentally friendly alternative, considering factors such as material properties, structural performance, and environmental impact</p>
                 </div>
                 <div class="timeline-box">
-                   <h1> TCS Landing Page</h1> 
-                    <p>It's a replicate page and also
-                        a responsive landing page created by using HTML, CSS, JS, and Bootstrap.
+                   <h1> CRUD Operations</h1> 
+                    <p>Developed a React-based web application implementing CRUD (Create, Read, Update, Delete) operations, enhancing user interactivity and experience. Incorporated Toastify for real-time notifications, ensuring seamless communication with users during data manipulation.
 
                     </p>
                 </div>
                 <div class="timeline-box">
-                    <h1>TODO List</h1> 
-                    <p>TODO List a list of tasks that an individual needs to complete or accomplish.In these list we can add the task, delete the task. <br>
-                    It's a responsive list done by using HTML,CSS and Javasrcipt</p>
+                    <h1>Hospital Management System</h1> 
+                    <p>The tool is designed for hospitals, physicians, and nurse to documents both the clinical conditions. They diagnose as well as the services and items delivered to beneficiaries to treat on their conditions.</p>
+                    <p>Technologies used:</p>
+                    <p>Java 8, MySQL, Spring Boot, Spring Data JPA, Eclipse, Maven, MVC, Hibernate with JPA, JPQL, Postman, Git, Lombok, Swagger.</p>
                 </div>
                 <div class="timeline-box">
                     <h1>IMDB Clone-App</h1>
@@ -281,7 +280,7 @@
                 <div id="my-details-container">
 
                     <h3> Get In touch </h3>
-                    <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                    
 
                     <h3> My Address </h3>
                     <div class="my-details-info-container">
